# smartcut

./: .gitattributes  README.md  build.bat  main.py  pyproject.toml
.github/workflows/: arch.yml  build.yml
distribution/arch/: PKGBUILD
distribution/msys2-packages/mingw-w64-ffmpeg/: PKGBUILD
distribution/msys2-packages/mingw-w64-x265/: PKGBUILD
distribution/pyinstaller/: build_windows.ps1  update_packages.ps1
smartcut/: __main__.py  cut_video.py  smart_cut.py  track_cutters.py  video_cutter.py
