[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcut"
version = "1.7.4"
description = "CLI tool for efficient video cutting with minimal recoding"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Santtu Keskinen", email = "santtu.keskinen@gmail.com"}
]
maintainers = [
    {name = "Santtu Keskinen", email = "santtu.keskinen@gmail.com"}
]
keywords = [
    "video", "cutting", "editing", "ffmpeg", "smart-cut", "lossless",
    "frame-accurate", "cli", "video-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "av",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "ffmpeg-python",
    "soundfile",
    "scipy",
    "requests",
    "psutil",
]
dev = [
    "build",
    "twine",
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/skeskinen/smartcut"
Documentation = "https://github.com/skeskinen/smartcut/blob/main/README.md"
Repository = "https://github.com/skeskinen/smartcut.git"
"Bug Tracker" = "https://github.com/skeskinen/smartcut/issues"
Changelog = "https://github.com/skeskinen/smartcut/blob/main/README.md#version-history"
"Commercial GUI" = "https://smartmediacutter.com"

[project.scripts]
smartcut = "smartcut.__main__:main"

[tool.setuptools]
packages = ["smartcut", "smartcut.tests"]

[tool.setuptools.package-data]
smartcut = ["py.typed"]

[tool.ruff]
line-length = 300
exclude = ["smartcut/parse_h265.py"]  # Experimental H.265 parser, not production code

[tool.ruff.lint]
# Select specific rules to check
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "PLC",    # pylint conventions
    "PLE",    # pylint errors
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "RUF",    # ruff-specific rules
    "ANN",    # type annotations
]

# Ignore specific rules that are not relevant for this project
ignore = [
    "PLR2004",  # Magic value used in comparison
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLR0913",  # Too many arguments
    "PLR0911",  # Too many return statements
    "B905",     # zip without strict= parameter
    "PLW2901",  # for loop variable overwritten
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"

[tool.pyright]
include = ["smartcut", "tests"]
exclude = ["smartcut/parse_h265.py"]  # Experimental H.265 parser, not production code
venvPath = "."
venv = "venv"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportUnusedImport = "warning"